--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,23 @@
 body {
   background-color: lightblue;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: teal;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:
